--- a/src/App.css
+++ b/src/App.css
@@ -191,4 +191,16 @@
     opacity: 0 !important;
   }
 
+  #query-button{
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 16px;
+    background: #43a047;
+    color: #fff;
+  
+  }
+ 
   
