Scroll Functionality Added

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@
     height: calc(450px - (45px + 70px));
     border: 1px solid #263238;
     background: #fff;
-  
+    overflow-y: scroll;
     position: relative;
   }
   .chat-window .chat-body .message-container {
